# vision-async-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  models.py  schemas.py  worker.py
app/alembic/: env.py
app/alembic/versions/: 7213effa643d_create_task_table.py
app/core/: celery_app.py  config.py  database.py
app/routers/: vision.py
app/services/: storage.py
app/tests/: conftest.py  test_api.py  test_config.py  test_storage.py  test_vision_endpoints.py  test_worker.py
content/: SPEC-001_VISION_ASYNC.md
content/docs/: alembic-setup.md
docs/: docker-compose-guide.md
frontend/: README.md  index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ProcessingSteps.tsx  TaskCard.tsx  UploadZone.tsx
frontend/src/hooks/: useTaskPolling.ts
scripts/: start.sh
